Fixes 357481: honor the "always sign with GPG" flag in idendity

added testcase
BUG: 357481

Differential revision: https://phabricator.kde.org/D892